@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_cpsportlets" meta_type="CPS Portlets Tool">
  <property name="title"></property>
+ <cache-manager name="portlet_lookup_ramcache"/>
  <property name="ignore_events">False</property>
  <cache-parameters type="Actions Portlet">
   <element value="actions:(categories)"/>
