@@ -4,7 +4,5 @@
  <object name="sections" portal_type="Section"/>
  <object name="workspaces" portal_type="Workspace"/>
  <object name="FckHTTPCache" meta_type="Accelerated HTTP Cache Manager"/>
- <!--
  <object name="portlet_lookup_ramcache" meta_type="RAM Cache Manager"/>
- -->
 </roots>
