@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portlet_lookup_ramcache" meta_type="RAM Cache Manager">
+ <property name="title">Portlet lookup RAM cache</property>
+ <property name="request_vars"/>
+ <property name="threshold">100</property>
+ <property name="max_age">0</property>
+ <!-- 3600s * 12h = 43200 -->
+ <property name="cleanup_interval">43200</property>
+</object>
